--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -72,6 +72,9 @@
           <li [routerLink]="'/inventario-farmacias'" routerLinkActive="active" class="submenu-item">
             Inventario <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
           </li>
+          <li [routerLink]="'/ajuste-stocks-farmacias'" routerLinkActive="active" class="submenu-item">
+            Ajuste stocks <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
+          </li>
         </ul>
       </li>
 
