--- a/frontFarm/src/app/admin/corte-detalle-dialog/corte-detalle-dialog.component.html
+++ b/frontFarm/src/app/admin/corte-detalle-dialog/corte-detalle-dialog.component.html
@@ -33,7 +33,7 @@
 
             <div class="general-line">
                 <div class="general-label">Recarcas inicial:</div>
-                <div class="general-value">{{ data.corte?.saldoInicialRecargas | currency }}</div>
+                <div class="general-value">{{ data.corte?.recargas?.saldoInicial | currency }}</div>
             </div>
         </div>
 
@@ -43,57 +43,57 @@
                 <h6 style="color: blue; font-size:medium; font-style: italic;">Ingresos por ventas</h6>
                 <div class="kv-grid" style="color: rgb(1, 83, 41);">
                     <div class="kv-label">Efectivo:</div>
-                    <div class="kv-value">{{ totales.ventasEfectivo | currency }}</div>
+                    <div class="kv-value">{{ data.corte.ventasEfectivo | currency }}</div>
                     <div class="kv-label">Tarjeta:</div>
-                    <div class="kv-value">{{ totales.ventasTarjeta | currency }}</div>
+                    <div class="kv-value">{{ data.corte.ventasTarjeta | currency }}</div>
                     <div class="kv-label">Transferencia:</div>
-                    <div class="kv-value">{{ totales.ventasTransferencia | currency }}</div>
+                    <div class="kv-value">{{ data.corte.ventasTransferencia | currency }}</div>
                     <div class="kv-label">Monedero:</div>
-                    <div class="kv-value">{{ totales.ventasVale | currency }}</div>
+                    <div class="kv-value">{{ data.corte.ventasVale | currency }}</div>
                 </div>
                 <h6 style="color: blue; font-size:medium; font-style: italic;">Egresos por devolucion de ventas</h6>
                 <div class="kv-grid" style="color:red; border-bottom: 1px solid #0453b3;">
                     <div class="kv-label">Efectivo:</div>
-                    <div class="kv-value">{{ totales.devolucionesEfectivo | currency }}</div>
+                    <div class="kv-value">{{ data.corte.devolucionesEfectivo | currency }}</div>
                     <div class="kv-label">Monedero:</div>
-                    <div class="kv-value">{{ totales.devolucionesVale | currency }}</div>
+                    <div class="kv-value">{{ data.corte.devolucionesVale | currency }}</div>
                 </div>
                 <h6 style="color: blue; font-size:medium; font-style: italic;">Ingresos por pedidos</h6>
                 <div class="kv-grid" style="color: rgb(1, 83, 41);">
                     <div class="kv-label">Efectivo:</div>
-                    <div class="kv-value">{{ totales.pedidosEfectivo | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosEfectivo | currency }}</div>
                     <div class="kv-label">Tarjeta:</div>
-                    <div class="kv-value">{{ totales.pedidosTarjeta | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosTarjeta | currency }}</div>
                     <div class="kv-label">Transferencia:</div>
-                    <div class="kv-value">{{ totales.pedidosTransferencia | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosTransferencia | currency }}</div>
                     <div class="kv-label">Monedero:</div>
-                    <div class="kv-value">{{ totales.pedidosVale | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosVale | currency }}</div>
                 </div>
                 <h6 style="color: blue; font-size:medium; font-style: italic;">Egresos por cancelación de pedidos</h6>
                 <div class="kv-grid" style="color:red; border-bottom: 1px solid #0453b3;">
                     <div class="kv-label">Efectivo:</div>
-                    <div class="kv-value">{{ totales.pedidosCanceladosEfectivo | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosCanceladosEfectivo | currency }}</div>
                     <div class="kv-label">Monedero:</div>
-                    <div class="kv-value">{{ totales.pedidosCanceladosVale | currency }}</div>
+                    <div class="kv-value">{{ data.corte.pedidosCanceladosVale | currency }}</div>
                 </div>
                 <h6 style="color: blue; font-size:medium; font-style: italic;">T O T A L E S:</h6>
                 <div class="kv-grid" style="color: rgb(1, 83, 41);">
 
                     <div class="kv-label">Efectivo:</div>
-                    <div class="kv-value">{{ totales.totalEfectivoEnCaja | currency }}</div>
+                    <div class="kv-value">{{ data.corte.totalEfectivoEnCaja | currency }}</div>
                     <div class="kv-label">Tarjeta:</div>
-                    <div class="kv-value">{{ totales.totalTarjeta | currency }}</div>
+                    <div class="kv-value">{{ data.corte.totalTarjeta | currency }}</div>
                     <div class="kv-label">Transferencia:</div>
-                    <div class="kv-value">{{ totales.totalTransferencia | currency }}</div>
+                    <div class="kv-value">{{ data.corte.totalTransferencia | currency }}</div>
                     <div class="kv-label">Monedero:</div>
-                    <div class="kv-value">{{ totales.totalVale | currency }}</div>
+                    <div class="kv-value">{{ data.corte.totalVale | currency }}</div>
 
                     <div class="kv-label">Recargas:</div>
-                    <div class="kv-value">{{ totales.totalRecargas | currency }}</div>
+                    <div class="kv-value">{{ data.corte?.recargas?.saldoTeoricoFinal | currency }}</div>
                 </div>
                 <div class="primer-grid" style="color: rgb(1, 83, 41);">
                     <div class="primer-label">Abonos a monederos de diversos clientes:</div>
-                    <div class="primer-value" style="color:red">{{ totales.abonosMonederos | currency }}</div>
+                    <div class="primer-value" style="color:red">{{ data.corte.abonosMonederos | currency }}</div>
                 </div>
 
             </div>
