--- a/frontFarm/src/styles.css
+++ b/frontFarm/src/styles.css
@@ -450,6 +450,10 @@ button {
   border-bottom: 1px solid black;
 }
 
+.lineBottomGray {
+  border-bottom: 1px solid rgb(82, 81, 81);
+}
+
 html,
 body {
   height: 100%;
