--- a/frontFarm/src/app/pages/dashboard/dashboard.component.html
+++ b/frontFarm/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <div class="dashboard">
-  <h2 style="text-align: center;" class="titulo">📊 Dashboard de Ventas</h2>
+  <h2 style="text-align: center;" class="titulo">📊 Dashboard de Ingresos</h2>
   <router-outlet></router-outlet>
 </div>
