--- a/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
+++ b/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
@@ -51,3 +51,11 @@ select, input {
 .kpi-card.utilidad { border-left: 5px solid #2E7D32; background-color: rgb(205, 249, 193); color: #00551c; }
 .kpi-card.margen { border-left: 5px solid #6A1B9A; background-color: rgb(245, 207, 250); color: #62027a; }
 .kpi-card.ventas-num { border-left: 5px solid #F57C00; background-color: rgb(252, 192, 162); color: #913101; }
+
+
+.chart-wrapper {
+  width: 100%;
+  height: 380px;
+  min-height: 380px;
+  display: block;
+}
