--- a/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
+++ b/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
@@ -1,5 +1,5 @@
 <!-- corte-caja-ticket.component.html -->
-<div class="ticket-corteCaja" style="font-family: Roboto Condensed, Arial, sans-serif;">
+<!-- <div class="ticket-corteCaja" style="font-family: Roboto Condensed, Arial, sans-serif;">
   <app-ticket-header
     [nombreFarmacia]="datosCorte.nomFarm"
     [direccion]="datosCorte.dirFarm"
@@ -34,11 +34,11 @@
   <hr>
   <app-ticket-footer></app-ticket-footer>
 </div>
-
+ -->
 
 <!-- VERSIÓN CHINGONA, DESCOMENTAR CUANDO LA PIDAN -->
 
-<!-- <div class="ticket-corteCaja" style="font-family: Roboto Condensed, Arial, sans-serif; font-size: 12px;">
+<div class="ticket-corteCaja" style="font-family: Roboto Condensed, Arial, sans-serif; font-size: 12px;">
 
   <app-ticket-header [nombreFarmacia]="datosCorte.nomFarm" [direccion]="datosCorte.dirFarm"
     [telefono]="datosCorte.telFarm" [imagen]="datosCorte.imgFarm" [titulo1]="datosCorte.ti1Farm"
@@ -192,4 +192,4 @@
     <em>{{ fraseSeleccionada }}</em>
   </div>
 
-</div> -->
+</div>
