--- a/frontFarm/src/styles.css
+++ b/frontFarm/src/styles.css
@@ -579,3 +579,34 @@ body {
     break-inside: avoid !important;
   }
 }
+
+/* Popup (si quieres controlar ancho) */
+.swal-inapam-popup {
+  max-width: 680px;
+}
+
+/* Título grande como captura */
+.swal-inapam-title {
+  font-size: 34px !important;
+  font-weight: 700 !important;
+}
+
+/* Botón "Sí cumple" */
+.swal-inapam-confirm {
+  background: #6c63ff !important;
+  border: 2px solid #6c63ff !important;
+  border-radius: 8px !important;
+  padding: 10px 26px !important;
+  font-size: 18px !important;
+  box-shadow: none !important;
+}
+
+/* Botón "No cumple" */
+.swal-inapam-cancel {
+  background: #6b6b6b !important;
+  border: 2px solid #a0a0a0 !important;
+  border-radius: 8px !important;
+  padding: 10px 26px !important;
+  font-size: 18px !important;
+  box-shadow: none !important;
+}
